# controllers/profile.controllers.js
@@ -35,6 +35,7 @@ const getAccountbyId = async(req,res,next)=>{
                 no_telp: true,
                 negara: true,
                 kota: true,
+                url_image:true
             }
         })
         if(!account) return res.json("Account isnt registered")
@@ -74,31 +75,36 @@ const updateProfile = async(req,res)=>{
 
 const changePassword = async (req,res,next)=>{
     try {
-        let {account_id, password_lama,password_baru} = req.body
+        let account = req.user
+        let {password_lama,password_baru,ulangi_password} = req.body
         //mencari account di database
         let isExist = await prisma.account.findUnique({
             where:{
-                account_id: account_id
+                account_id: account.account_id
             }
         })
+        //cek apakah password baru dan ulangi password sinkron
+        if(password_baru!= ulangi_password) return res.json("New Password and Confirm Password didnt match")
+
         //cek apakah password_lama sesuai dengan password dengan password di database
         let isPasswordCorrect = await bcrypt.compare(password_lama, isExist.password);
 
         if(!isPasswordCorrect) return res.json("Password isn't match")
 
+
         let hashedPassword = await bcrypt.hash(password_baru, 10)
 
         let updatedAccount = await prisma.account.update({
             where:{
-                account_id: account_id
+                account_id: account.account_id
             },
             data:{
                 password: hashedPassword
             }
         })
         res.status(200).json({
-        success:true,
-        data:updatedAccount
+            success:true,
+            data:updatedAccount
         })
     } catch (error) {
         next(error)
@@ -108,10 +114,10 @@ const changePassword = async (req,res,next)=>{
 
 const getRiwayatPembayaran = async (req,res,next)=>{
     try {
-        let account_id = req.user.account_id
+        let account = req.user
         let riwayat = await prisma.riwayat_transaksi.findMany({
             where:{
-                account_id: account_id
+                account_id: account.account_id
             },include:{
                 course:true
             }
